--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -16,7 +16,7 @@
   margin-top: -3px;
 }
 .donate-pick-and-feed {
-  padding: 40px auto 180px;
+  padding: 1px 30px 180px;
   color: var(--white);
 }
 
@@ -53,7 +53,7 @@
   color: var(--orange);
   font-weight: 400;
   text-align: center;
-  margin: 0 20px 16px -10px;
+  margin: 0 20px 16px 10px;
 }
 .donate-pick-and-feed__subtitle {
   font-weight: 400;
@@ -314,14 +314,15 @@ input[name='subscription-input']:checked::before {
     background-position: -173px center;
     margin-top: -0px;
   }
+
   .donate-pick-and-feed {
-    padding-bottom: 30px;
+    padding: 1px 30px 30px;
   }
   .donate-pick-and-feed__box {
     padding: 20px 44px 46px 47px;
   }
   .donate-pick-and-feed__h3:nth-child(1) {
-    margin-top: 10px;
+    margin-top: 40px;
     margin-bottom: 30px;
     padding-right: 100px;
   }
@@ -335,6 +336,9 @@ input[name='subscription-input']:checked::before {
     justify-content: center;
     align-items: flex-end;
     margin: 60px 0px 0px -20px;
+  }
+  .amount__p {
+    margin: 39.53px 0px 17px 18px;
   }
   /* .amount-grid__dots li:first-of-type {
     display: none;
@@ -355,6 +359,9 @@ input[name='subscription-input']:checked::before {
   .submit-form {
     justify-content: center;
   }
+  input[type='email'] {
+    margin-right: 0;
+  }
   .footer-nav {
     grid-column: 2/5;
     justify-content: end;
@@ -367,7 +374,7 @@ input[name='subscription-input']:checked::before {
 }
 @media screen and (max-width: 980px) {
   .pick-and-feed {
-    padding: 30px 20px 46px;
+    padding: 30px 20px 40px;
   }
   .donate-pick-and-feed__subtitle {
     text-align: center;
@@ -376,9 +383,6 @@ input[name='subscription-input']:checked::before {
     font-size: 24px;
     line-height: 29px;
     padding-right: 0;
-  }
-  .donate-pick-and-feed__h3:nth-child(2) {
-    margin: 30px 0;
   }
   .donate-pick-and-feed__box {
     padding: 20px 0 47px;
@@ -413,19 +417,39 @@ input[name='subscription-input']:checked::before {
   }
 }
 @media screen and (max-width: 640px) {
+  .donate-hero {
+    height: 335px;
+    background-position: -351px center;
+    background-size: inherit;
+    width: 100%;
+  }
   .donate-pick-and-feed__box {
     padding: 30px 0 31px;
   }
   .donate-pick-and-feed__h2 {
-    margin-bottom: 20px;
+    margin: 0 0 20px 0;
   }
-
+  .donate-pick-and-feed__h3:nth-child(1) {
+    margin: 0 0 20px;
+  }
+  .donate-pick-and-feed__h3:nth-child(2) {
+    margin: 25px 0 30px;
+  }
+  .panda-section {
+    margin: 50px 0px 0px -13px;
+  }
+  .amount__p {
+    margin: 36.53px 0px 6px 10px;
+  }
   .another-amount__form {
     margin: 50px 0 31px;
   }
   #input-another-amount {
     width: 180px;
     height: 42px;
+  }
+  .footer-copyright {
+    margin-top: 20px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -501,15 +525,53 @@ input[name='subscription-input']:checked::before {
 }
 
 @media screen and (max-width: 320px) {
+  .donate-hero {
+    height: 187px;
+  }
+  .donate-pick-and-feed__box {
+    padding: 20px 0 18px;
+  }
   .pick-and-feed {
     padding: 30px 10px 20px;
   }
   .donate-pick-and-feed__h2 {
     font-size: 24px;
     line-height: 29px;
+    margin: 0 0 10px 0;
   }
   .donate-pick-and-feed__subtitle {
     font-size: 16px;
+    line-height: 22px;
+  }
+  .donate-pick-and-feed__h3:nth-child(2) {
+    margin: 18px 0 18px;
+  }
+  .panda-section {
+    margin: 10px 0px 0px;
+  }
+  .panda-section__text {
+    margin-bottom: 34px;
+  }
+  .panda-section__x {
+    margin: 15px 0px 0 4px;
+  }
+  .amount__p {
+    margin: -2.47px 0px 9px 0px;
+  }
+  .amount-grid__amounts {
+    margin-left: -14px;
+    margin-top: 2px;
+  }
+  .amount-grid__dots {
+    margin: -10px 16px 0 18px;
+  }
+  .another-amount__form {
+    margin: -8px 0 23px;
+  }
+  .subscription__p {
+    margin: 0;
+    text-align: start;
+    font-size: 15.5px;
     line-height: 22px;
   }
 }
